Correction nav pour guides

--- a/site/guides/nav.html
+++ b/site/guides/nav.html
@@ -3,10 +3,10 @@
     <nav>
         <menu id="menu_lat" class="portable">
             <ul>
-                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/ad-blocker.html">Bloquer
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="ad-blocker.html">Bloquer
                         les
                         publicités</a> </li>
-                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/passwd-man.html">Sécuriser
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-man.html">Sécuriser
                         ses mots de passe</a> </li>
             </ul>
         </menu>
