--- a/site/nav.html
+++ b/site/nav.html
@@ -3,7 +3,7 @@
     <nav>
         <menu id="menu_lat" class="portable">
             <ul>
-                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/ad-blocker.html">Bloquer
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/block_pub.php">Bloquer
                         les
                         publicités</a> </li>
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/passwd-man.html">Sécuriser
