--- a/site/guides/passwd-man.html
+++ b/site/guides/passwd-man.html
@@ -7,7 +7,7 @@
     <title> Guides sécurité </title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
 
-    <script src="./jquery/jquery.js"></script>
+    <script src="../jquery/jquery.js"></script>
 </head>
 
 <body>
