Added password verification

--- a/site/guides/nav.html
+++ b/site/guides/nav.html
@@ -6,8 +6,10 @@
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="block_pub.php">Bloquer
                         les
                         publicités</a> </li>
-                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-man.html">Sécuriser
-                        ses mots de passe</a> </li>
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-verif.html">Sécuriser son mot
+                        de passe</a> </li>
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-man.html">Toujours se
+                        souvenir de ses mots de passe</a> </li>
             </ul>
         </menu>
     </nav>
