--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title> Guides sécurité </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script src="./jquery/jquery.js"></script>
+    <script src="./scripts/jquery-1.2.min.js"></script>
 </head>
 
 <body>
