--- a/site/nav.html
+++ b/site/nav.html
@@ -6,6 +6,8 @@
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/block_pub.php">Bloquer
                         les
                         publicités</a> </li>
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/passwd-verif.html">Sécuriser son mot
+                        de passe</a> </li>
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="guides/passwd-man.html">Sécuriser
                         ses mots de passe</a> </li>
             </ul>
