--- a/site/guides/nav.html
+++ b/site/guides/nav.html
@@ -8,6 +8,8 @@
                         publicités</a> </li>
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-verif.html">Sécuriser son mot
                         de passe</a> </li>
+                <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="./arnaque.html">Éviter les
+                        emails frauduleux</a> </li>
                 <li class="lien_menu_lat"> <a class="affichage_lien_menu_lat" href="passwd-man.html">Toujours se
                         souvenir de ses mots de passe</a> </li>
             </ul>
