--- a/site/guides/passwd-man.html
+++ b/site/guides/passwd-man.html
@@ -16,7 +16,7 @@
         <h1 id="titre_page"> Guides sécurité </h1>
     </header>
 
-    <!-- Menu de navigation -->
+    <!-- Acceuil -->
     <nav>
         <menu id="menu">
             <li class="lien_menu"> <a class="affichage_lien_menu" href="../index.html">Accueil</a> </li>
