Page title updated on all pages

--- a/site/guides/arnaque.html
+++ b/site/guides/arnaque.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Reconnaître les arnaques </title>
+    <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../scripts/arn.js"></script>
     <script src="../scripts/jquery-1.2.min.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page"> Reconnaître les Arnaques </h1>
+        <h1 id="titre_page">ZenNet</h1>
     </header>
 
     <!-- Menu de navigation -->
@@ -39,9 +39,10 @@
 
         <!-- corps de la page -->
         <section class="portable">
-            <h4>
-                Détecter le hammeçonnage dans chaque cas :
-            </h4>
+            <h2>Reconnaître les mails de hammeçonnage</h2>
+            <h3>
+                Cliquez sur l'email d'hammeçonnage dans chaque paire d'images ce dessous :
+            </h3>
             <center>
             <div>
                 <p id="statement"></p>
