--- a/site/guides/passwd-verif.html
+++ b/site/guides/passwd-verif.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Guides sécurité </title>
+    <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../scripts/jquery-1.2.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page">Sécuriser son mot de passe</h1>
+        <h1 id="titre_page">ZenNet</h1>
     </header>
 
     <!-- Menu de navigation -->
