--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Guides sécurité </title>
+    <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="./scripts/jquery-1.2.min.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page"> Guides sécurité </h1>
+        <h1 id="titre_page">ZenNet</h1>
     </header>
 
     <!-- Menu de navigation -->
