--- a/site/guides/passwd-verif.html
+++ b/site/guides/passwd-verif.html
@@ -12,7 +12,8 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page">ZenNet</h1>
+        <!-- <h1 id="titre_page">ZenNet</h1> -->
+        <img class="logo-simple" src="../img/logo-simple.png" alt="Logo : trois pierres empilées">
     </header>
 
     <!-- Menu de navigation -->
