--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,8 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page">ZenNet</h1>
+        <!-- <h1 id="titre_page">ZenNet</h1> -->
+        <img class="logo-titre" src="./img/logo-titre.png" alt="Logo : trois pierres empilées">
     </header>
 
     <!-- Menu de navigation -->
@@ -39,6 +40,7 @@
 
         <!-- corps de la page -->
         <section class="portable">
+            <h2>ZenNet</h2>
             <p>
                 Apprenez à naviguer sereinement en ligne grâce à nos guides simples et pratiques.
             </p>
