--- a/site/guides/passwd-verif.html
+++ b/site/guides/passwd-verif.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../scripts/jquery-1.2.min.js"></script>
