--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -66,6 +67,6 @@
     <!-- Fin bas de page-->
 
 
-    </body>
+</body>
 
-</html >
+</html>
