add affiche, modif css, modif arnaque button

--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZenNet</title>
+    <title> Guides sécurité </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="./scripts/jquery-1.2.min.js"></script>
@@ -14,8 +13,7 @@
 <body>
     <!-- En tête -->
     <header>
-        <!-- <h1 id="titre_page">ZenNet</h1> -->
-        <img class="logo-titre" src="./img/logo-titre.png" alt="Logo : trois pierres empilées">
+        <h1 id="titre_page"> Guides sécurité </h1>
     </header>
 
     <!-- Menu de navigation -->
@@ -41,15 +39,24 @@
 
         <!-- corps de la page -->
         <section class="portable">
-            <h2>ZenNet</h2>
-            <p>
-                Apprenez à naviguer sereinement en ligne grâce à nos guides simples et pratiques.
-            </p>
-            <p>
-                Pour commencer, cliquez sur un guide du menu.
-            </p>
-        </section>
+            <p class="story">
+                Albert a 69 ans. À Noël, son fils lui a acheté une tablette à écran tactile, pensant que cela pourrait l'inciter à aller sur Internet et à lire les nouvelles. Albert aime l'idée d'obtenir des nouvelles et de vérifier les prévisions météorologiques à tout moment de la journée.
 
+Pour Albert, la courbe d'apprentissage semble très raide : que ce soit réel ou imaginaire, Albert est profondément intimidé par Internet.
+
+Il a entendu des histoires sur les dangers qui se cachent dans le monde en ligne, et il a peur d'être la proie d'une arnaque en ligne. 
+
+            </p>
+
+            <img src="./img/Affiche.png"/>
+             
+            <div class="box">
+                <form>
+                    Pour toute remarque ou suggestion :<br> <input type="text" name="FAQ">
+                </form>
+            </div>
+        </section>
+        
 
     </div>
     <!-- fin div corps (agencement horizontal) -->
@@ -67,6 +74,6 @@
     <!-- Fin bas de page-->
 
 
-</body>
+    </body>
 
-</html>
+</html >
