Fix index and arnaque

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Guides sécurité </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="./scripts/jquery-1.2.min.js"></script>
@@ -13,7 +14,9 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page"> Guides sécurité </h1>
+        <!-- <h1 id="titre_page">ZenNet</h1> -->
+        <img class="logo-titre" src="./img/logo-titre.png" alt="Logo : trois pierres empilées">
+
     </header>
 
     <!-- Menu de navigation -->
