--- a/site/guides/arnaque.html
+++ b/site/guides/arnaque.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Reconnaître les arnaques </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../scripts/arn.js"></script>
     <script src="../scripts/jquery-1.2.min.js"></script>
@@ -13,7 +14,9 @@
 <body>
     <!-- En tête -->
     <header>
-        <h1 id="titre_page"> Reconnaître les Arnaques </h1>
+        <!-- <h1 id="titre_page">ZenNet</h1> -->
+        <img class="logo-simple" src="../img/logo-simple.png" alt="Logo : trois pierre
+s empilées">
     </header>
 
     <!-- Menu de navigation -->
@@ -39,9 +42,8 @@
 
         <!-- corps de la page -->
         <section class="portable">
-            <h4>
-                Détecter le hammeçonnage dans chaque cas :
-            </h4>
+            <h2>Reconnaître les mails de hammeçonnage</h2>
+            <h3>Cliquez sur l'email d'hammeçonnage dans chaque paire d'images ce dessous :</h3>
             <center>
             <div>
                 <p id="statement"></p>
