ajout commentaire arnaques.html

--- a/site/guides/arnaque.html
+++ b/site/guides/arnaque.html
@@ -49,7 +49,9 @@ s empilées">
                 <p id="statement"></p>
                 <p id="description"></p>
             <div class="row">
+                <p class="story">Un mail de Luke Jhonson ...</p>
             <div class="column">
+                
                 <img class="bigger" src="../img/Jigsaw.png" style="width:100%" onclick="javascript:answer(true)" />
             </div>
             <div class="column">
@@ -57,7 +59,8 @@ s empilées">
             </div>
             </div>
 
-            <div class="row">
+            <div class="row"><br>
+                <p class="story">Dropbox font du fishing ?</p>
             <div class="column">
                 <img class="bigger" src="../img/dropbox.png" style="width:100%" onclick="javascript:answer(true)" />
             </div>
@@ -66,7 +69,8 @@ s empilées">
             </div>
             </div>
 
-            <div class="row">
+            <div class="row"><br>
+                <p class="story">J'aime ma banque !</p>
             <div class="column">
                 <img class="bigger" src="../img/bnp.png" style="width:100%" onclick="javascript:answer(true)" />
             </div>
