Added guide password manager

--- a/site/guides/passwd-man.html
+++ b/site/guides/passwd-man.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZenNet</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     <script src="../scripts/jquery-1.2.min.js"></script>
 </head>
 
@@ -42,24 +42,28 @@
 
         <!-- corps de la page -->
         <section class="portable">
-            <h2>Sécuriser ses mots de passe</h2>
+            <h2>Se souvenir de tous ses mots de passe grâce à un gestionnaire de mots de passe</h2>
 
-            <h3>Pourquoi avoir des mots de passe compliqués ?</h3>
+            <h3>Mais pourquoi les mots de passes sont si compliqués ?</h3>
             <p>
-                <ul>
-                    <li>Difficile : social engineering</li>
-                    <li>Long : attaques dictionnaire, brute force</li>
-                    <li>Différent pour chaque site : si un des sites a une fuite</li>
-                </ul>
+            <ul>
+                <li><strong>Long</strong> : cela permet d'empêcher une personne ou un robot de trouver votre mot de passe en essayant
+                    toutes les combinaisons possibles.</li>
+                <li><strong>Différent</strong> sur chaque site : si un hacker réussi à trouver un seul de vos mots de
+                    passe, il ne pourra se connecter que sur un seul compte et pas en même temps à votre messagerie,
+                    réseau social ou banque.</li>
+                <li><strong>Difficile</strong> : votre mot de passe ne doit pas être facilement devinable : le nom de votre animal de
+                    compagnie ou les dates de naissance sont à prohiber.</li>
+            </ul>
             </p>
 
-            <h3>Comment satisfaire toutes ces conditions ?</h3>
-            <p>
-                <ul>
-                    <li>Enregistez les mots de passe sur votre navigateur</li>
-                    <li>Quand vous créez un mot de passe, générez le aléatoirement</li>
-                </ul>
-            </p>
+            <h3>Mais comment satisfaire toutes ces conditions et s'en souvenir ?</h3>
+            <ul>
+                <li>Quand vous créez un mot de passe, générez le aléatoirement.</li>
+                <img src="../img/password-man0.png" alt="Inscription Wikipedia">
+                <li>Le mot de passe est maintenant enregistré dans votre navigateur. Il vous sera proposé à votre prochaine connexion.</li>
+                <img src="../img/password-man1.png" alt="Connexion Wikipedia">
+            </ul>
         </section>
 
 
