--- a/site/footer.html
+++ b/site/footer.html
@@ -1,6 +1,6 @@
 <!-- bas de la page -->
 <footer>
     <p>
-        <em>Projet réalisé par Lilian, Wadie, Yanis et Rassan pour la hackathon [ré]inventer l'inclusion numérique en 2021</em>
+        <em>Projet réalisé par Lilian, Wadie, Yanis et Rassan pour le hackathon [ré]inventer l'inclusion numérique en 2021</em>
     </p>
 </footer>
